adding a login View  and a main View