@@ -18,3 +18,6 @@ on the first start, it will install the db file.
 
 ## Deletion
 Delete the db file and folder.
+
+## Compilation
+  --module-path /Users/jeremieequey/Documents/programmation/workspace/simpletimetracker/lib/javafx/macos/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml 
